<resources>
    <string name="app_name">Book Projector</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_book_projector">Book Projector</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_reports">Reports</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_projector">Projector</string>
    <string name="select_year">Select Year</string>
    <string name="first_year">First Year</string>
    <string name="other_year">Other Year</string>
</resources>